# training-cmake

./: .gitignore  CMakeLists.txt  cmakeWork.sln
First/: First.vcxproj
TestTheDll/: CMakeLists.txt  TestTheDll.vcxproj  TestTheDll.vcxproj.filters  TheTests.cpp
TheApp/: CMakeLists.txt  TheApp.vcxproj  TheApp.vcxproj.filters  TheAppSource.cpp
TheDll/: CMakeLists.txt  TheDll.cpp  TheDll.def  TheDll.h  TheDll.vcxproj  TheDll.vcxproj.filters
TheStaticLib/: CMakeLists.txt  MoreFunctions.cpp  ReadMe.txt  TheStaticLib.h  TheStaticLib.vcxproj  TheStaticLib.vcxproj.filters
import/gtest/: CMakeLists.txt
